// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/api/v1/events > forwards query params and returns the inner payload unchanged 1`] = `
[
  {
    "content_type": 22,
    "date": "2026-04-26T00:00:00",
    "discipline": "IPSC Handgun",
    "ends": "2026-04-27T00:00:00",
    "id": 27190,
    "is_registration_possible": false,
    "is_squadding_possible": false,
    "level": "Level III",
    "max_competitors": 240,
    "name": "SPSK Open 2026",
    "region": "SWE",
    "registration_closes": null,
    "registration_starts": null,
    "registration_status": "cl",
    "scoring_completed": 42.5,
    "squadding_closes": null,
    "squadding_starts": null,
    "status": "on",
    "venue": "Stockholm",
  },
]
`;

exports[`/api/v1/events > maps inner 502 to upstream_failed envelope 1`] = `
{
  "error": {
    "code": "upstream_failed",
    "message": "SSI down",
  },
}
`;

exports[`/api/v1/match/[ct]/[id] > maps a 400 from the inner route to bad_request 1`] = `
{
  "error": {
    "code": "bad_request",
    "message": "Invalid content_type",
  },
}
`;

exports[`/api/v1/match/[ct]/[id] > maps a 404 from the inner route to not_found 1`] = `
{
  "error": {
    "code": "not_found",
    "message": "Match not found",
  },
}
`;

exports[`/api/v1/match/[ct]/[id] > returns the match payload through the v1 envelope 1`] = `
{
  "cacheInfo": {
    "cachedAt": "2026-04-27T10:00:00Z",
  },
  "competitors": [
    {
      "category": "L",
      "club": "Bromma PK",
      "competitor_number": "1",
      "division": "Production Optics",
      "ics_alias": null,
      "id": 101,
      "license": "SE-12345",
      "name": "Jane Doe",
      "region": "SWE",
      "region_display": "Sweden",
      "shooterId": 12345,
    },
  ],
  "competitors_count": 200,
  "date": "2026-04-26T00:00:00",
  "discipline": "IPSC Handgun",
  "ends": "2026-04-27T00:00:00",
  "is_registration_possible": false,
  "is_squadding_possible": false,
  "lat": 59.3293,
  "level": "Level III",
  "lng": 18.0686,
  "match_status": "cp",
  "max_competitors": 240,
  "name": "SPSK Open 2026",
  "region": "SWE",
  "registration_closes": null,
  "registration_starts": null,
  "registration_status": "cl",
  "results_status": "all",
  "scoring_completed": 100,
  "squadding_closes": null,
  "squadding_starts": null,
  "squads": [
    {
      "competitorIds": [
        101,
      ],
      "id": 1,
      "name": "Squad 1",
      "number": 1,
    },
  ],
  "ssi_url": "https://shootnscoreit.com/event/22/27190/",
  "stages": [
    {
      "course_display": "Long",
      "firearm_condition": null,
      "id": 1,
      "max_points": 150,
      "min_rounds": 30,
      "name": "Stage 1",
      "paper_targets": 12,
      "procedure": null,
      "ssi_url": null,
      "stage_number": 1,
      "steel_targets": 2,
    },
  ],
  "stages_count": 12,
  "sub_rule": null,
  "venue": "Stockholm",
}
`;

exports[`/api/v1/match/[ct]/[id]/competitor/[competitorId]/stages > maps a 400 from the inner route to bad_request 1`] = `
{
  "error": {
    "code": "bad_request",
    "message": "Invalid ct, id, or competitorId",
  },
}
`;

exports[`/api/v1/match/[ct]/[id]/competitor/[competitorId]/stages > maps a 404 from the inner route to not_found 1`] = `
{
  "error": {
    "code": "not_found",
    "message": "Match or competitor not found",
  },
}
`;

exports[`/api/v1/match/[ct]/[id]/competitor/[competitorId]/stages > returns the per-competitor stage results through the v1 envelope 1`] = `
{
  "cacheInfo": {
    "cachedAt": "2026-04-27T10:00:00Z",
    "scorecardsCachedAt": "2026-04-27T10:00:05Z",
  },
  "competitorId": 101,
  "ct": 22,
  "division": "Production Optics",
  "matchId": 27190,
  "shooterId": 12345,
  "stages": [
    {
      "alphas": 12,
      "charlies": 0,
      "deltas": 0,
      "dq": false,
      "hit_factor": 8.142,
      "misses": 0,
      "no_shoots": 0,
      "procedurals": 0,
      "scorecard_updated_at": "2026-04-26T09:14:32Z",
      "stage_id": 5001,
      "stage_number": 1,
      "stage_pct": 100,
      "stage_points": 150,
      "time_seconds": 18.42,
    },
    {
      "alphas": null,
      "charlies": null,
      "deltas": null,
      "dq": false,
      "hit_factor": null,
      "misses": null,
      "no_shoots": null,
      "procedurals": null,
      "scorecard_updated_at": null,
      "stage_id": 5002,
      "stage_number": 2,
      "stage_pct": null,
      "stage_points": null,
      "time_seconds": null,
    },
  ],
}
`;

exports[`/api/v1/shooter/[shooterId] > maps GDPR 410 to not_found preserving the 410 status code 1`] = `
{
  "error": {
    "code": "not_found",
    "message": "This profile has been removed at the owner's request",
  },
}
`;

exports[`/api/v1/shooter/[shooterId] > returns the shooter dashboard payload 1`] = `
{
  "achievements": [],
  "matchCount": 1,
  "matches": [
    {
      "avgHF": 6.42,
      "competitorId": 101,
      "competitorsInDivision": 42,
      "ct": "22",
      "date": "2026-04-26T00:00:00",
      "division": "Production Optics",
      "level": "Level III",
      "matchId": "27190",
      "matchPct": 87.4,
      "name": "SPSK Open 2026",
      "region": "Sweden",
      "stageCount": 12,
      "totalA": 200,
      "totalC": 40,
      "totalD": 5,
      "totalMiss": 2,
      "totalNoShoots": 0,
      "venue": "Stockholm",
    },
  ],
  "profile": {
    "category": "L",
    "club": "Bromma PK",
    "division": "Production Optics",
    "ics_alias": null,
    "lastSeen": "2026-04-27T00:00:00Z",
    "license": "SE-12345",
    "name": "Jane Doe",
    "region": "SWE",
    "region_display": "Sweden",
  },
  "shooterId": 12345,
  "stats": {
    "aPercent": 81,
    "cPercent": 16,
    "consistencyCV": null,
    "dPercent": 2,
    "dateRange": {
      "from": "2026-04-26T00:00:00",
      "to": "2026-04-26T00:00:00",
    },
    "hfTrendSlope": null,
    "missPercent": 1,
    "overallAvgHF": 6.42,
    "overallMatchPct": 87.4,
    "totalStages": 12,
  },
}
`;

exports[`/api/v1/shooter/search > returns shooter search results 1`] = `
[
  {
    "club": "Bromma PK",
    "division": "Production Optics",
    "lastSeen": "2026-04-27T00:00:00Z",
    "name": "Jane Doe",
    "shooterId": 12345,
  },
  {
    "club": null,
    "division": null,
    "lastSeen": "2025-09-12T00:00:00Z",
    "name": "John Doe",
    "shooterId": 67890,
  },
]
`;
